[package]
name = "dropblog"
version = "2.0.3"
authors = ["Richard Dallaway <richard@dallaway.com>"]
edition = "2021"

[dependencies]
structopt = "0.3"
mailparse = "0.13"
regex = "1.3"
chrono = "0.4"
slug = "0.1"
imap = { version = "3.0.0-alpha.4", default-features = false, features = [ "rustls-tls" ] }
reqwest = { version = "0.11", default_features = false, features=["json", "blocking", "rustls-tls"] }
http = "0.2"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.9"


#[profile.release]
#strip = "debuginfo"