[package]
name = "dropblog"
version = "2.0.4"
authors = ["Richard Dallaway <richard@dallaway.com>"]
edition = "2021"

[dependencies]
clap = { version = "4", default_features = true, features = ["derive", "env"] }
mailparse = "0.13"
regex = "1.5"
chrono = "0.4"
slug = "0.1"
imap = { version = "3.0.0-alpha.9", default-features = false, features = [ "rustls-tls" ] }
reqwest = { version = "0.11", default_features = false, features=["json", "blocking", "rustls-tls"] }
http = "0.2"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.9"

